Modificaciones en template y borrador_enunciado

--- a/template.ipynb
+++ b/template.ipynb
@@ -11,11 +11,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nombre: [INSERTA TU NOMBRE AQUÍ]\n",
+    "Nombre: Esteban Castro\n",
     "\n",
-    "Email: [INSERTA TU EMAIL AQUÍ]\n",
+    "Email: esteban.castro@uc.cl\n",
     "\n",
-    "Telegram: [INSERTA TU USUARIO DE TELEGRAM]"
+    "Telegram: Sr GarZito"
    ]
   },
   {
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,6 +76,8 @@
     "def obtener_proximos_modificada(func_original, partidos, equipo):\n",
     "    resultado = func_original(partidos, equipo)\n",
     "    # Cambiar Comportamiento de la función original (opcional)\n",
+    "    if equipo in resultado:\n",
+    "        resultado.remove(equipo)\n",
     "    return resultado\n",
     "\n",
     "# Con esto reescribimos la función original para capturar el capturar resultado del alumno y modificarlo si es necesario\n",
@@ -93,7 +95,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Inserta en esta celda tu propuesta de enunciado. Las instrucciones se encuentran en la evaluación de clearn para esta área.]"
+    "## 🏆 **DCCampeonato de fútbol** 🏆\n",
+    "\n",
+    "¡Hoy esta ocurriendo el evento más importante para la fanáticada del fútbol **(y la programación)** : el DCCampeonato ⚽!\n",
+    "\n",
+    "Durante la primera parte de este amado evento no hubo ningún problema, sin embargo, durante el descanso, el encargado de emparejar los partidos le dio un ataque de... ¿sueño? \n",
+    "\n",
+    "A pesar de los esfuerzos, no hubo manera de despertar a este trabajador y se tuvo que atrasar temporalmente este evento hasta hallar una solución.\n",
+    "\n",
+    "\n",
+    "***Sin embargo, no todo está perdido...*** \n",
+    "\n",
+    "El CEO de la organización decidió llamar a su más valioso compañero de trabajo, conocido por sus grandes hazañas en el ámbito de la programación y conocido mundialmente por sus grandes capacidades... ¡Ese magnífico trabajador eres tú!\n",
+    "\n",
+    "**¡Eres la única persona capaz de arreglar este inconveniente y poner feliz a toda la fanáticada del DCCampeonato! ¡Contamos contigo!**\n",
+    "\n",
+    "### **Objetivo**\n",
+    "\n",
+    "Se te ha encomendado realizar la función `obtener_proximos(partidos, equipo)`, encargada de obtener todos los próximos partidos de un equipo en particular.\n",
+    "Sin embargo, el DCCampeonato de fútbol es uno con reglas muy rigurosas, puesto que **todos deben jugar contra todos**... ¡Sin excepción alguna!\n",
+    "\n",
+    "### **Ejemplo**\n",
+    "\n",
+    "#### **Input**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "partidos = [[\"Super Mario Brothers\", \"Team Sonic\"],\n",
+    "            [\"Kong Family\", \"The Koopa Troop\"]]\n",
+    "\n",
+    "equipo = \"Team Sonic\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **Output**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "['Kong Family', 'The Koopa Troop']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **Explicación**\n",
+    "\n",
+    "En el ***Input*** podemos observar todos los partidos que han ocurrido hasta el momento, en este caso, queremos saber todos los partidos pendientes del `\"Team Sonic\"`.\n",
+    "\n",
+    "Sabemos que sólo se ha enfrentado al equipo de `\"Super Mario Brothers\"`, por ende, en nuestro ***Output*** deben salir los equipos que aún no enfrenta el `\"Team Sonic\"`, los cuáles serían: `\"Kong Family\"` y `\"The Koopa Troop\"`."
    ]
   },
   {
@@ -122,7 +185,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "partidos = [[\"Chile\", \"Argentina\"],\n",
+    "            [\"Colombia\", \"Peru\"],\n",
+    "            [\"Chile\", \"Colombia\"],\n",
+    "            [\"Argentina\", \"Colombia\"]]\n",
+    "\n",
+    "equipo = \"Peru\""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -137,7 +207,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[Inserta en esta celda el Output de tu primer testcase]"
+    "['Chile', 'Argentina']"
    ]
   },
   {
@@ -160,7 +230,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[Inserta en esta celda el Input de tu segundo testcase]"
+    "partidos = [[\"Kanto\", \"Johto\"],\n",
+    "            [\"Hoenn\", \"Sinnoh\"],\n",
+    "            [\"Teselia\", \"Kalos\"],\n",
+    "            [\"Alola\", \"Galar\"]]\n",
+    "\n",
+    "equipo = \"Paldea\""
    ]
   },
   {
@@ -176,7 +251,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[Inserta en esta celda el Output de tu segundo testcase]"
+    "['Kanto', 'Johto', 'Hoenn', 'Sinnoh', 'Teselia', 'Kalos', 'Alola', 'Galar']"
    ]
   },
   {
@@ -199,7 +274,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[Inserta en esta celda el Input de tu tercer testcase]"
+    "partidos = [[\"SuperOcho\", \"Chocman\"],\n",
+    "            [\"SuperOcho\", \"Trencito\"],\n",
+    "            [\"Chocman\", \"Trencito\"]]\n",
+    "\n",
+    "equipo = \"Chocman\""
    ]
   },
   {
@@ -215,7 +294,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[Inserta en esta celda el Output de tu tercer testcase]"
+    "[]"
    ]
   }
  ],
@@ -235,7 +314,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
