Arreglos a la función modificable - template.ipynb

--- a/template.ipynb
+++ b/template.ipynb
@@ -76,8 +76,16 @@
     "def obtener_proximos_modificada(func_original, partidos, equipo):\n",
     "    resultado = func_original(partidos, equipo)\n",
     "    # Cambiar Comportamiento de la función original (opcional)\n",
+    "\n",
+    "    # Breve modificación realizada:\n",
+    "\n",
+    "    ## Primer dato: Eliminar el equipo si se encuentra en el resultado: Sería ilógico si un equipo se debe enfrentar a sí mismo.\n",
     "    if equipo in resultado:\n",
     "        resultado.remove(equipo)\n",
+    "\n",
+    "    ## Segundo dato: Hagamos que siempre retorne lo mismo sin importar el orden en el que se de los nombres del equipo en la lista:\n",
+    "    resultado = sorted(resultado)\n",
+    "    \n",
     "    return resultado\n",
     "\n",
     "# Con esto reescribimos la función original para capturar el capturar resultado del alumno y modificarlo si es necesario\n",
@@ -207,7 +215,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "['Chile', 'Argentina']"
+    "['Argentina', 'Chile']"
    ]
   },
   {
@@ -251,7 +259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "['Kanto', 'Johto', 'Hoenn', 'Sinnoh', 'Teselia', 'Kalos', 'Alola', 'Galar']"
+    "['Alola', 'Galar', 'Hoenn', 'Johto', 'Kalos', 'Kanto', 'Sinnoh', 'Teselia']"
    ]
   },
   {
